# math-series

./: README.md  pyproject.toml
math_series/: series.py
tests/: test_math_series.py
