[tool.poetry]
name = "math-series"
version = "0.1.0"
description = ""
authors = ["Marie <marie.marcos25@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.4"
pytest-watch = "^4.2.0"
autopep8 = "^1.5.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
