[tool.poetry]
name = "math-series"
version = "0.1.0"
description = ""
authors = ["Marie <marie.marcos25@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest-watch = "^4.2.0"
autopep8 = "^1.5.7"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
